added gadget, 1M opn, 3nt NS

--- a/KrysiaBartek2024/source/toc_entries.tex
+++ b/KrysiaBartek2024/source/toc_entries.tex
@@ -82,6 +82,44 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 2\diams\ = any \gf
 \end{itemize}
 
+\section{\texorpdfstring{1\majs\ opening}{1MOpening}}\label{sec:1MOpening}
+
+\subsubsection*{1\hearts -- ?}
+\begin{itemize}
+    \item 1\spades = 4+\spades, no 3\hearts OR 5\spades3\hearts + \gf
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with \hearts fit)
+    \item 2\clubs = \gf, usually no 5-card (or 5+\clubs)
+    \item 2\diams = 5\diams, \gf
+    \item 2\hearts = constructive raise
+    \item 2\spades = mini splinter
+    \item 2\nt = limit raise
+    \item 3\clubs = solid 6\clubs, \inv
+    \item 3\diams = solid 6\diams, \inv
+    \item 3\hearts = mixed raise
+    \item 3\spades = splinter \spades
+    \item 3\nt = splinter \diams
+    \item 4\clubs = splinter \clubs
+    \item 4\diams = 11\hcp, 4\hearts, no shortness
+\end{itemize}
+
+\subsubsection*{1\spades -- ?}
+\begin{itemize}
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with \spades fit)
+    \item 2\clubs = \gf, usually no 5-card (or 5+\clubs)
+    \item 2\diams = 5\diams, \gf
+    \item 2\hearts = 5\hearts, \gf
+    \item 2\spades = constructive raise
+    \item 2\nt = mini splinter
+    \item 3\clubs = solid 6\clubs, \inv
+    \item 3\diams = solid 6\diams, \inv
+    \item 3\hearts = solid 6\hearts, \inv
+    \item 3\spades = mixed raise
+    \item 3\nt = splinter \hearts
+    \item 4\clubs = splinter \clubs
+    \item 4\diams = splinter \diams
+    \item 4\hearts = 11\hcp, 4\spades, no shortness
+\end{itemize}
+
 \section{\texorpdfstring{1\ntx\ opening}{1ntOpening}}\label{sec:1ntOpening}
 
 1\nt\ opening = (14)15-17 BAL
@@ -192,6 +230,98 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \begin{itemize}
     \item 2\hearts\ = \pass/correct
     \item 2\spades\ = inv with \hearts
+\end{itemize}
+
+\section{\texorpdfstring{Gadget 3\clubs}{gadget3c}}\label{sec:gadget3c}
+
+\subsubsection*{1\clubs -- 1\spades \\ 2\nt -- ?}
+\begin{itemize}
+    \item 3\clubs = gadget
+    \item 3\diams = 4+\diams
+    \item 3\hearts = 5\spades4\hearts
+    \item 3\spades = fixing \spades
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\spades \\ 2\nt -- 3\clubs}
+\begin{itemize}
+    \item 3\diams = 4+\clubs
+    \item 3\hearts = 3\spades4+\clubs
+    \item 3\spades = 3\spades
+    \item 3\nt = no 3\spades, no 4\clubs
+    \item 4\clubs/4\diams/4\hearts = 4\spades cue
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- ?}
+\begin{itemize}
+    \item 3\clubs = gadget
+    \item 3\diams = 4+\diams
+    \item 3\hearts = 5\spades4\hearts OR fixing \hearts
+    \item 3\spades = 4\hearts4\spades
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- 3\clubs}
+\begin{itemize}
+    \item 3\diams = 4+\clubs
+    \item 3\hearts = 3\hearts
+    \item 3\spades = 3\hearts4\clubs
+    \item 3\nt = no 3\hearts, no 4\clubs
+    \item 4\clubs/4\diams/4\hearts = 4\hearts cue
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\spades \\ 2\nt -- ?}
+\begin{itemize}
+    \item 3\clubs = gadget
+    \item 3\diams = 3+\diams
+    \item 3\hearts = 5\spades4\hearts
+    \item 3\spades = fixing \spades
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\spades \\ 2\nt -- 3\clubs}
+\begin{itemize}
+    \item 3\diams = 6\diams, no 3\spades
+    \item 3\hearts = 3\spades6\diams
+    \item 3\spades = 3\spades
+    \item 3\nt = no 3\spades, no 6\diams
+    \item 4\clubs/4\diams/4\hearts = 4\spades cue
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\hearts \\ 2\nt -- ?}
+\begin{itemize}
+    \item 3\clubs = gadget
+    \item 3\diams = 3+\diams
+    \item 3\hearts = 5\spades4\hearts OR fixing \hearts
+    \item 3\spades = 4\hearts4\spades
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- 3\clubs}
+\begin{itemize}
+    \item 3\diams = 6\diams, no 3\hearts4
+    \item 3\hearts = 3\hearts
+    \item 3\spades = 3\hearts6\diams
+    \item 3\nt = no 3\hearts, no 6\diams
+    \item 4\clubs/4\diams/4\hearts = 4\hearts cue
+\end{itemize}
+
+\section{\texorpdfstring{Majors after gadget}{majorsAfterGadget}}\label{sec:majorsAfterGadget}
+
+\subsubsection*{1\minor -- 1\hearts \\ 2\nt -- ?}
+\begin{itemize}
+    \item 3\hearts = 5+\hearts4\spades OR fixing \hearts
+    \item 3\spades = 4\hearts4\spades
+\end{itemize}
+
+\subsubsection*{1\minor -- 1\hearts \\ 2\nt -- 3\hearts \\ ?}
+\begin{itemize}
+    \item 3\spades  = 4\spades
+    \item 3\nt = no 4\spades, no 4\hearts
+    \item 4\clubs/4\diams = 4\hearts, cue
+\end{itemize}
+
+\subsubsection*{1\minor -- 1\hearts \\ 2\nt -- 3\spades \\ ?}
+\begin{itemize}
+    \item 3\nt = no 4\spades, no 4\hearts
+    \item 4\clubs = fixing \hearts
+    \item 4\diams = fixing \spades
 \end{itemize}
 
 \section{\texorpdfstring{1\ntx\ -- dealing with interference}{1ntInterference}}\label{sec:1ntInterference}
@@ -408,6 +538,12 @@ SYSTEM ON
     \item any other bid = NAT, \inv
 \end{itemize}
 
+\section{\texorpdfstring{Non Serious 3\ntx}{nonSerious3nt}}\label{sec:nonSerious3nt}
+
+After agreeing on \hearts (\spades), if \gf, the no-jump 3\spades (3\nt) bid is
+an invite (usually no shortness) to Slam. The (serious) cue bid instead of non serious bid
+forces partner to show their cue.
+
 \section{\texorpdfstring{Reverses, jump shifts and jump reverses}{reverses}}\label{sec:reverses}
 
 \subsubsection*{1\anysuit{x}\ -- 1\anysuit{y}\ -- ?}
@@ -421,32 +557,6 @@ SYSTEM ON
 \begin{itemize}
     \item 1\spades\ = 4\spades, 12-17
     \item 2\spades\ = 4\spades, (18)19+
-\end{itemize}
-
-\section{\texorpdfstring{Preempt opening}{preemptOpening}}\label{sec:preemptOpening}
-
-\subsubsection*{2\diams -- ?}
-\begin{itemize}
-    \item 2\nt = OGUST (after 2\diams only!)
-\end{itemize}
-
-\subsubsection*{2\diams -- 2\diams \\ ?}
-\begin{itemize}
-    \item 3\clubs = 5-7, bad \diams quality
-    \item 3\diams = 5-7, good \diams quality
-    \item 3\hearts = 8-10, bad \diams quality
-    \item 3\spades = 8-10, good \diams quality
-\end{itemize}
-
-\subsubsection*{2\hearts -- ?}
-\begin{itemize}
-    \item 2\spades = \lsf
-    \item 2\nt = 5+\spades
-\end{itemize}
-
-\subsubsection*{2\spades -- ?}
-\begin{itemize}
-    \item 2\nt = \lsf
 \end{itemize}
 
 \section{\texorpdfstring{Acol 2{\color{OliveGreen}\clubsuit}}{acol2c}}\label{sec:acol2c}
@@ -518,112 +628,6 @@ System as after 2\nt\ opening
     \item \dbl\ = negative
     \item \pass\ = positive
 \end{itemize}
-
-\section{\texorpdfstring{Dealing with preempts}{dealingWithPreempts}}\label{sec:dealingWithPreempts}
-
-\subsubsection*{(2\hearts) -- ?}
-\begin{itemize}
-    \item 3\spades = strong hand, solid suit
-    \item 3\hearts = Michaels, \ftwon to 4\anysuit{x}
-    \item 4\clubs/4\diams = Leaping Michaels, \gf
-    \item 4\hearts = \minor, strong
-    \item 4\nt = \minor, weaker then 4\hearts
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- \dbl -- (P) -- ?}
-\begin{itemize}
-    \item 2\nt = Better Minor Lebensohl
-    \item 3\clubs = 0-11, 5+\clubs
-    \item 2\spades = weak
-    \item 3\diams = \inv (8-11)
-    \item 3\hearts = no 4\spades, no \hearts stopper
-    \item 3\spades = 5\spades, \inv (8-11) \imp
-    \item 3\nt = no 4\spades, \hearts stopper
-    \item 4\hearts = \minor, no \hearts control, Slam Try
-    \item 4\spades = to play
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- \dbl -- (P) -- 2\nt \\
-                (P) -- 3\mins -- (P) -- ?}
-\begin{itemize}
-    \item 3\diams = weak
-    \item 3\hearts = 4\spades, no \hearts stopper
-    \item 3\spades = 4\spades, \inv (8-11) \imp
-    \item 3\nt = 4\spades, \hearts stopper
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- \dbl -- (3\hearts) -- ?}
-\begin{itemize}
-    \item \dbl = no 4\spades, 10+
-\end{itemize}
-
-\subsubsection*{(2\spades) -- ?}
-\begin{itemize}
-    \item 3\spades = Michaels, \ftwon to 4\anysuit{x}
-    \item 4\clubs/4\diams = Leaping Michaels, \gf
-    \item 4\spades = \minor, strong
-    \item 4\nt = \minor, weaker then 4\hearts
-\end{itemize}
-
-\subsubsection*{(2\spades) -- \dbl -- (P) -- ?}
-\begin{itemize}
-    \item 2\nt = Better Minor Lebensohl
-    \item 3\clubs = 0-11, 5+\clubs
-    \item 3\diams/3\hearts = \inv (8-11)
-    \item 3\spades = no 4\hearts, no \spades stopper
-    \item 3\nt = no 4\hearts, \spades stopper
-    \item 4\hearts = to play
-    \item 4\hearts = \minor, no \spades control, Slam Try
-\end{itemize}
-
-\subsubsection*{(2\spades) -- \dbl -- (P) -- 2\nt \\
-                (P) -- 3\mins -- (P) -- ?}
-\begin{itemize}
-    \item 3\hearts/3\diams = to play
-    \item 3\spades = 4\hearts, no \spades stopper
-    \item 3\nt = 4\hearts, \spades stopper
-\end{itemize}
-
-\subsubsection*{(2\spades) -- \dbl -- (4\spades) -- ?}
-\begin{itemize}
-    \item 4\nt = two-suited OR weak \hearts
-    \item 5\clubs/5\diams = to play
-    \item 5\hearts = Slam Try
-\end{itemize}
-
-\section{\texorpdfstring{Rebid with 3-card support}{rebid3card}}\label{sec:rebid3card}
-
-\subsubsection*{1\clubs -- 1\hearts \\ 2\hearts -- ?}
-\begin{itemize}
-    \item 2\spades = 5+\hearts, \inv+, \lsf
-    \item 2\nt = 4\hearts, \inv
-    \item 3\clubs = 4\hearts + 4\clubs, \inv
-    \item 3\diams = 4\hearts, \gf
-\end{itemize}
-
-\subsubsection*{1\clubs -- 1\spades \\ 2\spades -- ?}
-\begin{itemize}
-    \item 2\nt = 4\spades, \inv
-    \item 3\clubs = 4\spades + 4\clubs, \inv
-    \item 3\diams = 5\spades, \inv+, \lsf
-    \item 3\hearts = 4\spades, \gf
-\end{itemize}
-
-\section{\texorpdfstring{Ask LSF}{askLSF}}\label{sec:askLSF}
-
-\subsubsection*{All basic ASK LSF sequences:}
-\begin{itemize}
-    \item 1\majs\ -- 2\majs\ \\ 2\majs+1\alrts
-    \item 1\minor\ -- 1\majs\ \\ 2\majs\ -- 2\majs+1\alrts
-    \item 1\majs\ -- 2\anysuit{x} \\ 2\majs\ -- 2\majs+1\alrts
-    \item 1\minor\ -- 1\majs \\ 3\majs\ -- 3\majs+1\alrts
-\end{itemize}
-
-More in: \textbf{mini splinter} and \textbf{responding to partner's preempt}.
-
-\subsubsection*{Answering:}
-
-no shortness / lowest shortness / medium shortness / (highest shortness)
 
 \section{\texorpdfstring{Gazilli}{gazilli}}\label{sec:gazilli}
 
@@ -760,346 +764,5 @@ any shortness 9-11, 4-card support, not \gf!
     \item 3\hearts\ = \diams\ shortness
     \item 3\spades\ = \hearts\ shortness
     \item 3\nt\ = \hearts\ shortness \gf\ (max)
-\end{itemize}
-
-\section{\texorpdfstring{Transfers after 1\majs\ (\dbl)}{Transfers1MX}}\label{sec:Transfers1MX}
-
-\subsubsection*{1\hearts -- (\dbl) -- ?}
-\begin{itemize}
-    \item \rdbl = 10+
-    \item 1\spades = NAT, 4+\spades, \fonce
-    \item 1\nt = $\rightarrow$ 2\clubs
-    \item 2\clubs = $\rightarrow$ 2\diams
-    \item 2\diams = $\rightarrow$ 2\hearts, constructive 8-10
-    \item 2\hearts = 4-7, 3\hearts
-    \item 3\diams = 4+\hearts, 6-9
-    \item 3\hearts = 0-6 \hcp
-\end{itemize}
-
-\subsubsection*{1\spades -- (\dbl) -- ?}
-\begin{itemize}
-    \item \rdbl = 10+
-    \item 1\nt = $\rightarrow$ 2\clubs
-    \item 2\clubs = $\rightarrow$ 2\diams
-    \item 2\diams = $\rightarrow$ 2\hearts
-    \item 2\hearts = $\rightarrow$ 2\spades, constructive 8-10
-    \item 2\spades = 4-7, 3\spades
-    \item 3\hearts = 4+\spades, 6-9
-    \item 3\spades = 0-6 \hcp
-\end{itemize}
-
-\section{\texorpdfstring{2\ntx\ overcall after major preempt}{preempt2nt}}\label{sec:preempt2nt}
-
-\subsubsection*{(2\majs) -- ?}
-\begin{itemize}
-    \item 2\nt\ = 16-18 BAL, promises \majs\ stopper
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- ?}
-\begin{itemize}
-    \item 3\clubs\ = forces 3\diams, 1-\hearts \gf OR weak with \diams
-    \item 3\diams\ = 4\spades \gf
-    \item 3\hearts\ = forces 3\spades, 5+\spades, weak or \gf
-    \item 3\spades\ = long minor/minors, no \hearts\ shortness, 3\nt\ = ASK
-    \item 3\nt\ = to play
-    \item 4\clubs\ = 6\clubs5\spades, may have shortness
-    \item 4\diams\ = 6\diams5\spades, may have shortness
-    \item 4\hearts\ = 6+\spades
-    \item 4\spades\ = minors
-    \item 4\nt\ = quantitative
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
-                (P) -- 3\diams -- (P) -- ?}
-\begin{itemize}
-    \item \pass = weak with \diams
-    \item 3\hearts = 3-\spades
-    \item 3\spades = 4\spades
-    \item 3\nt = 5\spades
-    \item 4\clubs = 6+\spades
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
-                (P) -- 3\diams -- (P) -- 3\hearts \\
-                (P) -- ?}
-\begin{itemize}
-    \item 3\spades = no \hearts stopper
-    \item 3\nt = good \hearts stopper
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
-                (P) -- 3\diams -- (P) -- 3\hearts \\
-                (P) -- 3\spades -- (P) -- ?}
-\begin{itemize}
-    \item 3\nt = 3\spades
-    \item 4\clubs, 4\diams = own suit
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\diams \\
-                (P) -- ?}
-\begin{itemize}
-    \item 3\hearts = minors
-    \item 3\spades = 4\spades
-    \item 3\nt = to play
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\hearts \\
-                (P) -- 3\spades -- (P) -- ?}
-\begin{itemize}
-    \item \pass = weak, 5+\spades
-    \item 3\nt = \pass/correct
-    \item 4\clubs/4\diams = NAT
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\spades \\
-                (P) -- 3\nt -- (P) -- ?}
-\begin{itemize}
-    \item 4\clubs/4\diams = NAT, fixed
-    \item 4\hearts = 1\spades, both minors
-    \item 4\spades = void \spades, both minors
-\end{itemize}
-
-\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 4\hearts \\
-                (P) -- 4\spades -- (P) -- ?}
-\begin{itemize}
-    \item 4\nt = RKCB 1430
-    \item 5\anysuit{x} = EX 0314
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- ?}
-\begin{itemize}
-    \item 3\clubs\ = forces 3\diams, 1-\spades \gf OR weak with \diams
-    \item 3\diams\ = forces 3\hearts, 5+\hearts, weak or \gf
-    \item 3\hearts\ = long minor/minors, no \spades shortness, 3\spades = ASK
-    \item 3\spades\ = 4\hearts, \gf
-    \item 3\nt\ = to play
-    \item 4\clubs\ = 6\clubs5\hearts, may have shortness
-    \item 4\diams\ = 6\diams5\hearts, may have shortness
-    \item 4\hearts\ = 6+\hearts
-    \item 4\spades\ = minors
-    \item 4\nt\ = quantitative
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
-                (P) -- 3\diams -- (P) -- ?}
-\begin{itemize}
-    \item \pass = weak with \diams
-    \item 3\hearts = 3-\hearts
-    \item 3\spades = 4\hearts
-    \item 3\nt = 5\hearts
-    \item 4\clubs = 6+\hearts
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
-                (P) -- 3\diams -- (P) -- 3\hearts \\
-                (P) -- ?}
-\begin{itemize}
-    \item 3\spades = no \spades stopper
-    \item 3\nt = good \spades stopper
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
-                (P) -- 3\diams -- (P) -- 3\hearts \\
-                (P) -- 3\spades -- (P) -- ?}
-\begin{itemize}
-    \item 3\nt = 3\hearts
-    \item 4\clubs, 4\diams = own suit
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\diams \\
-                (P) -- 3\hearts -- (P) -- ?}
-\begin{itemize}
-    \item \pass = weak, 5+\hearts
-    \item 3\nt = \pass/correct
-    \item 4\clubs/4\diams = NAT
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\hearts \\
-                (P) -- 3\spades -- (P) -- ?}
-\begin{itemize}
-    \item 4\clubs/4\diams = NAT, fixed
-    \item 4\hearts = 1\spades both minors
-    \item 4\spades = void \spades both minors
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\spades \\
-                (P) -- ?}
-\begin{itemize}
-    \item 4\clubs = 4\hearts
-    \item 3\nt = to play
-\end{itemize}
-
-\subsubsection*{(2\spades) -- 2\nt -- (P) -- 4\diams \\
-                (P) -- 4\hearts -- (P) -- ?}
-\begin{itemize}
-    \item 4\spades = RKCB 1403
-    \item 4\nt = EX \spades \textbf{0314}
-    \item 5\clubs/5\diams = EX \textbf{0314}
-\end{itemize}
-
-\section{\texorpdfstring{Overcalling 2\ntx}{overcalling2nt}}\label{sec:overcalling2nt}
-
-\subsubsection*{(2\nt) -- ?}
-\begin{itemize}
-    \item \dbl = \twosuit{\clubs}{\spades} OR \twosuit{\diams}{\hearts}
-    \item 3\clubs = \twosuit{\clubs}{\diams} OR \twosuit{\hearts}{\spades}
-    \item 3\diams = \twosuit{\clubs}{\hearts} OR \twosuit{\diams}{\spades}
-\end{itemize}
-
-\section{\texorpdfstring{Dealing with Multi/Wilkosz}{dealingWithMulti}}\label{sec:dealingWithMulti}
-
-\subsubsection*{(2\diams) -- ?}
-\begin{itemize}
-    \item \dbl = (13)14-16 BAL, no 5M, may have minor singleton
-    \item 2\hearts = 11-15, 5+\hearts
-    \item 2\spades = 11-15, 5+\spades
-    \item 2\nt = 17-19, BAL, may have 5M
-    \item 3\clubs = \clubs, not 5332/5422
-    \item 3\diams = \diams, not 5332/5422
-    \item 3\hearts, 3\spades = solid suit, weaker then power double
-    \item 3\nt = minors
-    \item 4\clubs = \clubs + \major
-    \item 4\diams = \diams + \major
-\end{itemize}
-
-\subsubsection*{(2\diams) -- P -- (P\alrts) -- ?}
-System like after 2\diams preempt.
-
-\subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
-\begin{itemize}
-    \item \pass = no suitable call OR takeout with \spades shortness
-    \item \dbl = 14-16 BAL \vimp
-    \item 2\spades = 11-15, 5+\spades, may be solid 4\spades with 1-\hearts
-    \item 2\nt = 17-19, BAL
-\end{itemize}
-
-\subsubsection*{(2\diams) -- P -- (2\spades) -- ?}
-\begin{itemize}
-    \item \pass = no suitable call OR takeout with \hearts shortness
-    \item \dbl = takeout with \spades shortness \imp
-    \item 2\nt = 17-19, BAL
-\end{itemize}
-
-\subsubsection*{(2\diams) -- P -- (>2\spades) -- ?}
-\begin{itemize}
-    \item \dbl = takeout \imp
-\end{itemize}
-
-\subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
-                (P) -- ?}        
-\begin{itemize}
-    \item 2\nt = minors
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- ?}        
-\begin{itemize}
-    \item \pass = want to defend, doubles are penalty
-    \item 2\major = 5+\major, to play
-    \item 2\nt = Lebensohl (see below)
-    \item 3\clubs = Stayman
-    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
-    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
-    \item 3\spades = $\rightarrow$ \nt, no \major stoppers
-    \item 4\diams, 4\hearts = Texas
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- 2\nt \\
-                (P) -- 3\clubs -- (P) -- ?}        
-\begin{itemize}
-    \item \pass = to play
-    \item 3\diams = \gf, no 4\majs
-    \item 3\hearts, 3\spades = \inv
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (\hearts/\spades) -- ?}        
-\begin{itemize}
-    \item \dbl = 9+, \ftwon to 2\nt, no 5\major, no \major shortness
-    \item 2\nt = Lebensohl (see below)
-    \item 3\clubs = Stayman
-    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
-    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
-    \item 3\spades = takeout with opps' suit shortness, \gf
-    \item 4\diams, 4\hearts = Texas
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (2\hearts/\spades) -- 2\nt \\
-                (P) -- 3\clubs -- (P) -- ?}        
-\begin{itemize}
-    \item \pass/3\diams = to play
-    \item 3\hearts, 3\spades = \inv
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (2\hearts/\spades) -- \dbl \\
-                (P) -- ?}        
-\begin{itemize}
-    \item \pass = to play
-    \item 2\spades = 4\spades, \fonce
-    \item 2\nt = NAT, minimum
-    \item 3\clubs = NAT, minimum
-    \item 3\diams = NAT, minimum
-    \item 3\hearts over 2\spades = NAT, minimum
-    \item cue 3\hearts, 3\spades = maximum, no stopper, no 4\spades
-    \item 3\nt = maximum, stopper, no 4\spades
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (2\hearts) -- \dbl \\
-                (2\spades) -- ?}        
-\begin{itemize}
-    \item \pass = \fonce
-    \item \dbl = penalty
-    \item 2\nt = do not want to defend, \gf
-    \item 3\clubs = NAT, \gf
-    \item 3\diams = NAT, \gf
-    \item 3\hearts = NAT, \gf
-    \item 3\spades = maximum, no \spades stopper
-    \item 3\nt = maximum, stopper
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (2\hearts) -- \dbl \\
-                (2\spades) -- P -- (P) -- ?}
-\begin{itemize}
-    \item 3\spades = \spades shortness, \gf %%% Can be ask for stop??
-\end{itemize}
-
-\subsubsection*{(2\diams) -- \dbl -- (2\spades) -- \dbl \\
-                (3\hearts) -- ?}  
-\begin{itemize}
-    \item \pass = 14-16, no 4\spades OR power double, \fonce
-    \item \dbl = 14-16, 4\spades, defensive
-    
-\end{itemize}
-
-% \subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
-%                 (2\spades) -- ?}        
-% \begin{itemize}
-%     \item 2\nt = any hand with \hearts
-% \end{itemize}
-
-\section{\texorpdfstring{Other}{otherBidsAndRules}}\label{sec:otherBidsAndRules}
-
-\subsubsection*{1\clubs\ -- (1\hearts) -- P -- (2\hearts) \\ ?}
-\begin{itemize}
-    \item \dbl\ = \clubs\spades, choose
-    \item 2\nt\ = \clubs\diams, choose
-    \item 3\clubs\ = to play
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- (1\spades) -- P -- (2\spades) \\ ?}
-\begin{itemize}
-    \item \dbl\ = \clubs\hearts, choose
-    \item 2\nt\ = \clubs\diams, choose
-    \item 3\clubs\ = to play
-\end{itemize}
-
-\subsubsection*{1\diams\ -- (1\spades) -- P -- (2\spades) \\ ?}
-\begin{itemize}
-    \item \dbl\ = \diams\hearts, choose
-    \item 3\clubs\ = \clubs\diams, choose
-\end{itemize}
-
-\subsubsection*{1\diams\ -- (1\hearts) -- P -- (2\hearts) \\ ?}
-\begin{itemize}
-    \item \dbl\ = \diams\spades, choose
-    \item 3\clubs\ = \clubs\diams, choose
 \end{itemize}
 
