--- a/KrysiaBartek2024/source/krysia_bartek_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_bartek_strefa.tex
@@ -26,41 +26,45 @@
 \begin{description}
 \def\hyperlinkedtitle{\hyperref[sec:1mOpening]{1\, 1\mins\ opening}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1mOpening}
-\def\hyperlinkedtitle{\hyperref[sec:1ntOpening]{2\, 1\ntx\ opening}}
+\def\hyperlinkedtitle{\hyperref[sec:1MOpening]{2\, 1\majs\ opening}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:1MOpening}
+\def\hyperlinkedtitle{\hyperref[sec:1ntOpening]{3\, 1\ntx\ opening}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1ntOpening}
-\def\hyperlinkedtitle{\hyperref[sec:overcalling1nt]{3\, Overcalling 1\ntx}}
+\def\hyperlinkedtitle{\hyperref[sec:overcalling1nt]{4\, Overcalling 1\ntx}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:overcalling1nt}
-\def\hyperlinkedtitle{\hyperref[sec:1ntInterference]{4\, 1\ntx\ -- dealing with interference}}
+\def\hyperlinkedtitle{\hyperref[sec:1ntInterference]{5\, 1\ntx\ -- dealing with interference}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1ntInterference}
-\def\hyperlinkedtitle{\hyperref[sec:2ntOpening]{5\, 2\ntx\ opening}}
+\def\hyperlinkedtitle{\hyperref[sec:2ntOpening]{6\, 2\ntx\ opening}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:2ntOpening}
-\def\hyperlinkedtitle{\hyperref[sec:drury]{6\, Drury}}
+\def\hyperlinkedtitle{\hyperref[sec:drury]{7\, Drury}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:drury}
-\def\hyperlinkedtitle{\hyperref[sec:reverses]{7\, Reverses, jump shifts and jump reverses}}
+\def\hyperlinkedtitle{\hyperref[sec:nonSerious3nt]{8\, Non Serious 3\ntx}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:nonSerious3nt}
+\def\hyperlinkedtitle{\hyperref[sec:reverses]{9\, Reverses, jump shifts and jump reverses}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:reverses}
-\def\hyperlinkedtitle{\hyperref[sec:preemptOpening]{8\, Preempt opening}}
+\def\hyperlinkedtitle{\hyperref[sec:preemptOpening]{10\, Preempt opening}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:preemptOpening}
-\def\hyperlinkedtitle{\hyperref[sec:acol2c]{9\, Acol 2{\color{OliveGreen}\clubsuit}}}
+\def\hyperlinkedtitle{\hyperref[sec:acol2c]{11\, Acol 2{\color{OliveGreen}\clubsuit}}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:acol2c}
-\def\hyperlinkedtitle{\hyperref[sec:dealingWithPreempts]{10\, Dealing with preempts}}
+\def\hyperlinkedtitle{\hyperref[sec:dealingWithPreempts]{12\, Dealing with preempts}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:dealingWithPreempts}
-\def\hyperlinkedtitle{\hyperref[sec:rebid3card]{11\, Rebid with 3-card support}}
+\def\hyperlinkedtitle{\hyperref[sec:rebid3card]{13\, Rebid with 3-card support}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:rebid3card}
-\def\hyperlinkedtitle{\hyperref[sec:askLSF]{12\, Ask LSF}}
+\def\hyperlinkedtitle{\hyperref[sec:askLSF]{14\, Ask LSF}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:askLSF}
-\def\hyperlinkedtitle{\hyperref[sec:gazilli]{13\, Gazilli}}
+\def\hyperlinkedtitle{\hyperref[sec:gazilli]{15\, Gazilli}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:gazilli}
-\def\hyperlinkedtitle{\hyperref[sec:miniSplinter]{14\, Mini Splinters}}
+\def\hyperlinkedtitle{\hyperref[sec:miniSplinter]{16\, Mini Splinters}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:miniSplinter}
-\def\hyperlinkedtitle{\hyperref[sec:Transfers1MX]{15\, Transfers after 1\majs\ (\dbl)}}
+\def\hyperlinkedtitle{\hyperref[sec:Transfers1MX]{17\, Transfers after 1\majs\ (\dbl)}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:Transfers1MX}
-\def\hyperlinkedtitle{\hyperref[sec:preempt2nt]{16\, 2\ntx\ overcall after major preempt}}
+\def\hyperlinkedtitle{\hyperref[sec:preempt2nt]{18\, 2\ntx\ overcall after major preempt}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:preempt2nt}
-\def\hyperlinkedtitle{\hyperref[sec:overcalling2nt]{17\, Overcalling 2\ntx}}
+\def\hyperlinkedtitle{\hyperref[sec:overcalling2nt]{19\, Overcalling 2\ntx}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:overcalling2nt}
-\def\hyperlinkedtitle{\hyperref[sec:dealingWithMulti]{18\, Dealing with Multi/Wilkosz}}
+\def\hyperlinkedtitle{\hyperref[sec:dealingWithMulti]{20\, Dealing with Multi/Wilkosz}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:dealingWithMulti}
-\def\hyperlinkedtitle{\hyperref[sec:otherBidsAndRules]{19\, Other}}
+\def\hyperlinkedtitle{\hyperref[sec:otherBidsAndRules]{21\, Other}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:otherBidsAndRules}
 \end{description}
 \newpage
@@ -146,6 +150,44 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \begin{itemize}
     \item 2\clubs\ = any invite, forces 2\diams
     \item 2\diams\ = any \gf
+\end{itemize}
+
+\section{\texorpdfstring{1\majs\ opening}{1MOpening}}\label{sec:1MOpening}
+
+\subsubsection*{1\hearts -- ?}
+\begin{itemize}
+    \item 1\spades = 4+\spades, no 3\hearts OR 5\spades3\hearts + \gf
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with \hearts fit)
+    \item 2\clubs = \gf, usually no 5-card (or 5+\clubs)
+    \item 2\diams = 5\diams, \gf
+    \item 2\hearts = constructive raise
+    \item 2\spades = mini splinter
+    \item 2\nt = limit raise
+    \item 3\clubs = solid 6\clubs, \inv
+    \item 3\diams = solid 6\diams, \inv
+    \item 3\hearts = mixed raise
+    \item 3\spades = splinter \spades
+    \item 3\nt = splinter \diams
+    \item 4\clubs = splinter \clubs
+    \item 4\diams = 11\hcp, 4\hearts, no shortness
+\end{itemize}
+
+\subsubsection*{1\spades -- ?}
+\begin{itemize}
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with \spades fit)
+    \item 2\clubs = \gf, usually no 5-card (or 5+\clubs)
+    \item 2\diams = 5\diams, \gf
+    \item 2\hearts = 5\hearts, \gf
+    \item 2\spades = constructive raise
+    \item 2\nt = mini splinter
+    \item 3\clubs = solid 6\clubs, \inv
+    \item 3\diams = solid 6\diams, \inv
+    \item 3\hearts = solid 6\hearts, \inv
+    \item 3\spades = mixed raise
+    \item 3\nt = splinter \hearts
+    \item 4\clubs = splinter \clubs
+    \item 4\diams = splinter \diams
+    \item 4\hearts = 11\hcp, 4\spades, no shortness
 \end{itemize}
 
 \section{\texorpdfstring{1\ntx\ opening}{1ntOpening}}\label{sec:1ntOpening}
@@ -473,6 +515,12 @@ SYSTEM ON
     \item 4\majs = to play
     \item any other bid = NAT, \inv
 \end{itemize}
+
+\section{\texorpdfstring{Non Serious 3\ntx}{nonSerious3nt}}\label{sec:nonSerious3nt}
+
+After agreeing on \hearts (\spades), if \gf, the no-jump 3\spades (3\nt) bid is
+an invite (usually no shortness) to Slam. The (serious) cue bid instead of non serious bid
+forces partner to show their cue.
 
 \section{\texorpdfstring{Reverses, jump shifts and jump reverses}{reverses}}\label{sec:reverses}
 
